lib/haskell/natural4/src/L4BNFC/ParNatural.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParNatural.y
-----------------------------------------------------------------------------

state 22 contains 1 shift/reduce conflicts.
state 36 contains 1 reduce/reduce conflicts.
state 41 contains 1 shift/reduce conflicts.
state 43 contains 1 shift/reduce conflicts.
state 45 contains 1 shift/reduce conflicts.
state 50 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 65 contains 1 shift/reduce conflicts.
state 74 contains 1 shift/reduce conflicts.
state 77 contains 2 reduce/reduce conflicts.
state 78 contains 5 reduce/reduce conflicts.
state 81 contains 2 reduce/reduce conflicts.
state 82 contains 1 shift/reduce conflicts.
state 83 contains 2 reduce/reduce conflicts.
state 84 contains 2 reduce/reduce conflicts.
state 85 contains 1 shift/reduce conflicts.

rule 41 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pIfPart -> IfPart                           (0)
	%start_pBoolStructR -> BoolStructR                 (1)
	%start_pBoolStructR2 -> BoolStructR2               (2)
	%start_pBoolStructR1 -> BoolStructR1               (3)
	%start_pBSRLeaf2 -> BSRLeaf2                       (4)
	%start_pBSRLeaf1 -> BSRLeaf1                       (5)
	%start_pBSRLeaf -> BSRLeaf                         (6)
	%start_pBSRLeaf3 -> BSRLeaf3                       (7)
	%start_pBSRAny -> BSRAny                           (8)
	%start_pListBSRAny -> ListBSRAny                   (9)
	%start_pBSRAll -> BSRAll                           (10)
	%start_pListBSRAll -> ListBSRAll                   (11)
	%start_pRelationalPredicate -> RelationalPredicate   (12)
	%start_pRPRel -> RPRel                             (13)
	%start_pMultiTerm -> MultiTerm                     (14)
	%start_pMTExpr -> MTExpr                           (15)
	%start_pMTT -> MTT                                 (16)
	%start_pMTN -> MTN                                 (17)
	%start_pListMTExpr -> ListMTExpr                   (18)
	PIdent -> L_PIdent                                 (19)
	PInteger -> L_PInteger                             (20)
	IfPart -> 'IF' BSRAny                              (21)
	BoolStructR -> ListBSRAny 'OR' BoolStructR         (22)
	BoolStructR -> BoolStructR1                        (23)
	BoolStructR2 -> BSRLeaf                            (24)
	BoolStructR2 -> '(' BoolStructR ')'                (25)
	BoolStructR1 -> ListBSRAll 'AND' BoolStructR       (26)
	BoolStructR1 -> BoolStructR2                       (27)
	BSRLeaf2 -> RelationalPredicate                    (28)
	BSRLeaf2 -> BSRLeaf3                               (29)
	BSRLeaf1 -> BSRLeaf 'POST' MultiTerm               (30)
	BSRLeaf1 -> BSRLeaf2                               (31)
	BSRLeaf -> 'PRE' MultiTerm BoolStructR             (32)
	BSRLeaf -> BSRLeaf1                                (33)
	BSRLeaf3 -> '(' BSRLeaf ')'                        (34)
	BSRAny -> BoolStructR                              (35)
	ListBSRAny -> BSRAny                               (36)
	ListBSRAny -> BSRAny 'OR' ListBSRAny               (37)
	BSRAll -> BoolStructR                              (38)
	ListBSRAll -> BSRAll                               (39)
	ListBSRAll -> BSRAll 'AND' ListBSRAll              (40)
	RelationalPredicate -> MultiTerm 'IS' MultiTerm    (41)
	RelationalPredicate -> MultiTerm 'IS' BoolStructR   (42)
	RelationalPredicate -> MultiTerm                   (43)
	RPRel -> 'IS'                                      (44)
	MultiTerm -> ListMTExpr                            (45)
	MTExpr -> MTT                                      (46)
	MTT -> PIdent                                      (47)
	MTN -> PInteger                                    (48)
	ListMTExpr -> MTExpr                               (49)
	ListMTExpr -> MTExpr ListMTExpr                    (50)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'AND'          { PT _ (TS _ 3) }
	'IF'           { PT _ (TS _ 4) }
	'IS'           { PT _ (TS _ 5) }
	'OR'           { PT _ (TS _ 6) }
	'POST'         { PT _ (TS _ 7) }
	'PRE'          { PT _ (TS _ 8) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PInteger     { PT _ (T_PInteger _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pIfPart  rule  0
	%start_pBoolStructR rule  1
	%start_pBoolStructR2 rule  2
	%start_pBoolStructR1 rule  3
	%start_pBSRLeaf2 rule  4
	%start_pBSRLeaf1 rule  5
	%start_pBSRLeaf rule  6
	%start_pBSRLeaf3 rule  7
	%start_pBSRAny  rule  8
	%start_pListBSRAny rule  9
	%start_pBSRAll  rule  10
	%start_pListBSRAll rule  11
	%start_pRelationalPredicate rule  12
	%start_pRPRel   rule  13
	%start_pMultiTerm rule  14
	%start_pMTExpr  rule  15
	%start_pMTT     rule  16
	%start_pMTN     rule  17
	%start_pListMTExpr rule  18
	PIdent          rule  19
	PInteger        rule  20
	IfPart          rule  21
	BoolStructR     rules 22, 23
	BoolStructR2    rules 24, 25
	BoolStructR1    rules 26, 27
	BSRLeaf2        rules 28, 29
	BSRLeaf1        rules 30, 31
	BSRLeaf         rules 32, 33
	BSRLeaf3        rule  34
	BSRAny          rule  35
	ListBSRAny      rules 36, 37
	BSRAll          rule  38
	ListBSRAll      rules 39, 40
	RelationalPredicate rules 41, 42, 43
	RPRel           rule  44
	MultiTerm       rule  45
	MTExpr          rule  46
	MTT             rule  47
	MTN             rule  48
	ListMTExpr      rules 49, 50

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pIfPart -> . IfPart                          (rule 0)

	'IF'           shift, and enter state 64

	IfPart         goto state 63

State 1

	%start_pBoolStructR -> . BoolStructR                (rule 1)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 62
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 2

	%start_pBoolStructR2 -> . BoolStructR2              (rule 2)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR2   goto state 61
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 3

	%start_pBoolStructR1 -> . BoolStructR1              (rule 3)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 60
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 4

	%start_pBSRLeaf2 -> . BSRLeaf2                      (rule 4)

	'('            shift, and enter state 55
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BSRLeaf2       goto state 59
	BSRLeaf3       goto state 42
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 5

	%start_pBSRLeaf1 -> . BSRLeaf1                      (rule 5)

	'('            shift, and enter state 55
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 57
	BSRLeaf        goto state 58
	BSRLeaf3       goto state 42
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 6

	%start_pBSRLeaf -> . BSRLeaf                        (rule 6)

	'('            shift, and enter state 55
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 56
	BSRLeaf3       goto state 42
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 7

	%start_pBSRLeaf3 -> . BSRLeaf3                      (rule 7)

	'('            shift, and enter state 55

	BSRLeaf3       goto state 54

State 8

	%start_pBSRAny -> . BSRAny                          (rule 8)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 53
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 9

	%start_pListBSRAny -> . ListBSRAny                  (rule 9)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 52
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 10

	%start_pBSRAll -> . BSRAll                          (rule 10)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 44
	BSRAll         goto state 50
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 11

	%start_pListBSRAll -> . ListBSRAll                  (rule 11)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 46
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 12

	%start_pRelationalPredicate -> . RelationalPredicate    (rule 12)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	RelationalPredicategoto state 34
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 13

	%start_pRPRel -> . RPRel                            (rule 13)

	'IS'           shift, and enter state 33

	RPRel          goto state 32

State 14

	%start_pMultiTerm -> . MultiTerm                    (rule 14)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MultiTerm      goto state 30
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 15

	%start_pMTExpr -> . MTExpr                          (rule 15)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MTExpr         goto state 29
	MTT            goto state 23

State 16

	%start_pMTT -> . MTT                                (rule 16)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MTT            goto state 28

State 17

	%start_pMTN -> . MTN                                (rule 17)

	L_PInteger     shift, and enter state 27

	PInteger       goto state 25
	MTN            goto state 26

State 18

	%start_pListMTExpr -> . ListMTExpr                  (rule 18)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 24

State 19

	PIdent -> . L_PIdent                                (rule 19)

	L_PIdent       shift, and enter state 20


State 20

	PIdent -> L_PIdent .                                (rule 19)

	'('            reduce using rule 19
	')'            reduce using rule 19
	'AND'          reduce using rule 19
	'IS'           reduce using rule 19
	'OR'           reduce using rule 19
	'POST'         reduce using rule 19
	'PRE'          reduce using rule 19
	L_PIdent       reduce using rule 19
	%eof           reduce using rule 19


State 21

	MTT -> PIdent .                                     (rule 47)

	'('            reduce using rule 47
	')'            reduce using rule 47
	'AND'          reduce using rule 47
	'IS'           reduce using rule 47
	'OR'           reduce using rule 47
	'POST'         reduce using rule 47
	'PRE'          reduce using rule 47
	L_PIdent       reduce using rule 47
	%eof           reduce using rule 47


State 22

	ListMTExpr -> MTExpr .                              (rule 49)
	ListMTExpr -> MTExpr . ListMTExpr                   (rule 50)

	'('            reduce using rule 49
	')'            reduce using rule 49
	'AND'          reduce using rule 49
	'IS'           reduce using rule 49
	'OR'           reduce using rule 49
	'POST'         reduce using rule 49
	'PRE'          reduce using rule 49
	L_PIdent       shift, and enter state 20
			(reduce using rule 49)

	%eof           reduce using rule 49

	PIdent         goto state 21
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 76

State 23

	MTExpr -> MTT .                                     (rule 46)

	'('            reduce using rule 46
	')'            reduce using rule 46
	'AND'          reduce using rule 46
	'IS'           reduce using rule 46
	'OR'           reduce using rule 46
	'POST'         reduce using rule 46
	'PRE'          reduce using rule 46
	L_PIdent       reduce using rule 46
	%eof           reduce using rule 46


State 24

	%start_pListMTExpr -> ListMTExpr .                  (rule 18)

	%eof           accept


State 25

	MTN -> PInteger .                                   (rule 48)

	%eof           reduce using rule 48


State 26

	%start_pMTN -> MTN .                                (rule 17)

	%eof           accept


State 27

	PInteger -> L_PInteger .                            (rule 20)

	%eof           reduce using rule 20


State 28

	%start_pMTT -> MTT .                                (rule 16)

	%eof           accept


State 29

	%start_pMTExpr -> MTExpr .                          (rule 15)

	%eof           accept


State 30

	%start_pMultiTerm -> MultiTerm .                    (rule 14)

	%eof           accept


State 31

	MultiTerm -> ListMTExpr .                           (rule 45)

	'('            reduce using rule 45
	')'            reduce using rule 45
	'AND'          reduce using rule 45
	'IS'           reduce using rule 45
	'OR'           reduce using rule 45
	'POST'         reduce using rule 45
	'PRE'          reduce using rule 45
	L_PIdent       reduce using rule 45
	%eof           reduce using rule 45


State 32

	%start_pRPRel -> RPRel .                            (rule 13)

	%eof           accept


State 33

	RPRel -> 'IS' .                                     (rule 44)

	%eof           reduce using rule 44


State 34

	%start_pRelationalPredicate -> RelationalPredicate .    (rule 12)

	%eof           accept


State 35

	RelationalPredicate -> MultiTerm . 'IS' MultiTerm    (rule 41)
	RelationalPredicate -> MultiTerm . 'IS' BoolStructR    (rule 42)
	RelationalPredicate -> MultiTerm .                  (rule 43)

	')'            reduce using rule 43
	'AND'          reduce using rule 43
	'IS'           shift, and enter state 75
	'OR'           reduce using rule 43
	'POST'         reduce using rule 43
	%eof           reduce using rule 43


State 36

	BSRAny -> BoolStructR .                             (rule 35)
	BSRAll -> BoolStructR .                             (rule 38)

	'AND'          reduce using rule 38
	'OR'           reduce using rule 35
	%eof           reduce using rule 38
			(reduce using rule 35)



State 37

	BoolStructR1 -> BoolStructR2 .                      (rule 27)

	')'            reduce using rule 27
	'AND'          reduce using rule 27
	'OR'           reduce using rule 27
	'POST'         reduce using rule 27
	%eof           reduce using rule 27


State 38

	BoolStructR -> BoolStructR1 .                       (rule 23)

	')'            reduce using rule 23
	'AND'          reduce using rule 23
	'OR'           reduce using rule 23
	'POST'         reduce using rule 23
	%eof           reduce using rule 23


State 39

	BSRLeaf1 -> BSRLeaf2 .                              (rule 31)

	')'            reduce using rule 31
	'AND'          reduce using rule 31
	'OR'           reduce using rule 31
	'POST'         reduce using rule 31
	%eof           reduce using rule 31


State 40

	BSRLeaf -> BSRLeaf1 .                               (rule 33)

	')'            reduce using rule 33
	'AND'          reduce using rule 33
	'OR'           reduce using rule 33
	'POST'         reduce using rule 33
	%eof           reduce using rule 33


State 41

	BoolStructR2 -> BSRLeaf .                           (rule 24)
	BSRLeaf1 -> BSRLeaf . 'POST' MultiTerm              (rule 30)

	')'            reduce using rule 24
	'AND'          reduce using rule 24
	'OR'           reduce using rule 24
	'POST'         shift, and enter state 66
			(reduce using rule 24)

	%eof           reduce using rule 24


State 42

	BSRLeaf2 -> BSRLeaf3 .                              (rule 29)

	')'            reduce using rule 29
	'AND'          reduce using rule 29
	'OR'           reduce using rule 29
	'POST'         reduce using rule 29
	%eof           reduce using rule 29


State 43

	ListBSRAny -> BSRAny .                              (rule 36)
	ListBSRAny -> BSRAny . 'OR' ListBSRAny              (rule 37)

	'OR'           shift, and enter state 68
			(reduce using rule 36)

	%eof           reduce using rule 36


State 44

	BoolStructR -> ListBSRAny . 'OR' BoolStructR        (rule 22)

	'OR'           shift, and enter state 69


State 45

	ListBSRAll -> BSRAll .                              (rule 39)
	ListBSRAll -> BSRAll . 'AND' ListBSRAll             (rule 40)

	'AND'          shift, and enter state 71
			(reduce using rule 39)

	%eof           reduce using rule 39


State 46

	%start_pListBSRAll -> ListBSRAll .                  (rule 11)
	BoolStructR1 -> ListBSRAll . 'AND' BoolStructR      (rule 26)

	'AND'          shift, and enter state 70
	%eof           accept


State 47

	BSRLeaf2 -> RelationalPredicate .                   (rule 28)

	')'            reduce using rule 28
	'AND'          reduce using rule 28
	'OR'           reduce using rule 28
	'POST'         reduce using rule 28
	%eof           reduce using rule 28


State 48

	BoolStructR2 -> '(' . BoolStructR ')'               (rule 25)
	BSRLeaf3 -> '(' . BSRLeaf ')'                       (rule 34)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 73
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 74
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 49

	BSRLeaf -> 'PRE' . MultiTerm BoolStructR            (rule 32)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MultiTerm      goto state 72
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 50

	%start_pBSRAll -> BSRAll .                          (rule 10)
	ListBSRAll -> BSRAll .                              (rule 39)
	ListBSRAll -> BSRAll . 'AND' ListBSRAll             (rule 40)

	'AND'          shift, and enter state 71
			(reduce using rule 39)

	%eof           accept


State 51

	BoolStructR1 -> ListBSRAll . 'AND' BoolStructR      (rule 26)

	'AND'          shift, and enter state 70


State 52

	%start_pListBSRAny -> ListBSRAny .                  (rule 9)
	BoolStructR -> ListBSRAny . 'OR' BoolStructR        (rule 22)

	'OR'           shift, and enter state 69
	%eof           accept


State 53

	%start_pBSRAny -> BSRAny .                          (rule 8)
	ListBSRAny -> BSRAny .                              (rule 36)
	ListBSRAny -> BSRAny . 'OR' ListBSRAny              (rule 37)

	'OR'           shift, and enter state 68
			(reduce using rule 36)

	%eof           accept


State 54

	%start_pBSRLeaf3 -> BSRLeaf3 .                      (rule 7)

	%eof           accept


State 55

	BSRLeaf3 -> '(' . BSRLeaf ')'                       (rule 34)

	'('            shift, and enter state 55
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 67
	BSRLeaf3       goto state 42
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 56

	%start_pBSRLeaf -> BSRLeaf .                        (rule 6)
	BSRLeaf1 -> BSRLeaf . 'POST' MultiTerm              (rule 30)

	'POST'         shift, and enter state 66
	%eof           accept


State 57

	%start_pBSRLeaf1 -> BSRLeaf1 .                      (rule 5)
	BSRLeaf -> BSRLeaf1 .                               (rule 33)

	'POST'         reduce using rule 33
	%eof           accept


State 58

	BSRLeaf1 -> BSRLeaf . 'POST' MultiTerm              (rule 30)

	'POST'         shift, and enter state 66


State 59

	%start_pBSRLeaf2 -> BSRLeaf2 .                      (rule 4)

	%eof           accept


State 60

	%start_pBoolStructR1 -> BoolStructR1 .              (rule 3)
	BoolStructR -> BoolStructR1 .                       (rule 23)

	'AND'          reduce using rule 23
	'OR'           reduce using rule 23
	%eof           accept


State 61

	%start_pBoolStructR2 -> BoolStructR2 .              (rule 2)

	%eof           accept


State 62

	%start_pBoolStructR -> BoolStructR .                (rule 1)
	BSRAny -> BoolStructR .                             (rule 35)
	BSRAll -> BoolStructR .                             (rule 38)

	'AND'          reduce using rule 38
	'OR'           reduce using rule 35
	%eof           accept


State 63

	%start_pIfPart -> IfPart .                          (rule 0)

	%eof           accept


State 64

	IfPart -> 'IF' . BSRAny                             (rule 21)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 65
	ListBSRAny     goto state 44
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 65

	IfPart -> 'IF' BSRAny .                             (rule 21)
	ListBSRAny -> BSRAny .                              (rule 36)
	ListBSRAny -> BSRAny . 'OR' ListBSRAny              (rule 37)

	'OR'           shift, and enter state 68
			(reduce using rule 36)

	%eof           reduce using rule 21


State 66

	BSRLeaf1 -> BSRLeaf 'POST' . MultiTerm              (rule 30)

	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	MultiTerm      goto state 86
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 67

	BSRLeaf1 -> BSRLeaf . 'POST' MultiTerm              (rule 30)
	BSRLeaf3 -> '(' BSRLeaf . ')'                       (rule 34)

	')'            shift, and enter state 79
	'POST'         shift, and enter state 66


State 68

	ListBSRAny -> BSRAny 'OR' . ListBSRAny              (rule 37)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20

	PIdent         goto state 21
	BoolStructR    goto state 36
	BoolStructR2   goto state 37
	BoolStructR1   goto state 38
	BSRLeaf2       goto state 39
	BSRLeaf1       goto state 40
	BSRLeaf        goto state 41
	BSRLeaf3       goto state 42
	BSRAny         goto state 43
	ListBSRAny     goto state 85
	BSRAll         goto state 45
	ListBSRAll     goto state 51
	RelationalPredicategoto state 47
	MultiTerm      goto state 35
	MTExpr         goto state 22
	MTT            goto state 23
	ListMTExpr     goto state 31

State 69

	BoolStructR -> ListBSRAny 'OR' . BoolStructR        (rule 22)

	'('            shift, and enter state 48
	'PRE'          shift, and enter state 49
	L_PIdent       shift, and enter state 20
